<resources>
    <string name="app_name">BestRoommate</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="titleWelcomeFrag" translatable="false">NA</string>
    <string name="titleAddEditTaskFrag" translatable="false">NA</string>
    <string name="titleToDoListFrag" translatable="false">NA</string>
    <string name="titleAllTaskFrag" translatable="false">NA</string>
    <string name="menuList" translatable="false">List</string>
    <string name="menuToDo">To Do</string>
    <string name="menuLeaderboard">Leaderboard</string>

    <!-- WelcomeFragment -->
    <string name="chart_name">%1s stats</string>
    <string name="chart_legend_title">Point per Roommate</string>

    <!-- AllTaskFragment -->
    <string name="alltask_fragment_name">All Tasks</string>
    <string name="all_task_modifications_title">Edit</string>
    <string name="all_task_title">Title</string>
    <string name="all_task_type">Type</string>
    <string name="all_task_location">Localisation</string>
    <string name="all_task_completed_reward">Reward</string>
    <string name="no_user">No user</string>

    <!-- ToDoListFragment -->
    <string name="todo_fragment_name">To do</string>
    <string name="task_title">Title</string>
    <string name="task_type">Type</string>
    <string name="task_state">State</string>
    <string name="task_deadline">DeadLine</string>
    <string name="task_note">Note</string>
    <string name="task_reward">Reward</string>

    <!-- AlertDialog -->
    <string name="ad_title">What do you want to do?</string>
    <string name="ad_message">Choose an option for this Task</string>
    <string name="ad_delete">Delete</string>
    <string name="ad_edit">Edit</string>
    <string name="ad_cancel">Cancel</string>
    <string name="ad_check">Check</string>
    <string name="check_user" translatable="false">check_user</string>

    <!-- AddEditTaskFragment -->
    <string name="new_task_title">New task</string>
    <string name="add_fragment_name">New task</string>
    <string name="edit_fragment_name">Edit task</string>
    <string name="add">add</string>

    <!-- Tasks State -->
    <string name="task_done">Done</string>
    <string name="task_not_done">Not done</string>
    <string name="task_in_progress">In progress</string>
    <string name="task_state_unknown">Unknown</string>

    <!-- Task Type -->
    <string name="task_type_shopping">Shopping</string>
    <string name="task_type_cleaning">Cleaning</string>
    <string name="task_type_cooking">Cooking</string>
    <string name="task_type_delivery">Delivery</string>
    <string name="task_type_laundry">Laundry</string>
    <string name="task_type_dishes">Dishes</string>
    <string name="task_type_trash">Trash</string>
    <string name="task_type_other">Other</string>
    <string name="task_type_unknown">Unknown</string>
    <string name="successful_operation">Successful operation</string>
    <string name="failed_operation">Failed operation</string>
    <string name="successful_check">Well done ! Task complete</string>

</resources>