<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/todo_card_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/all_tasks_card_layout"
            android:paddingVertical="5sp">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="200sp"
                android:layout_height="30sp"
                android:gravity="center"
                android:text="@string/task_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toEndOf="@+id/task_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/task_image"
                android:layout_width="75sp"
                android:layout_height="75sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_dishes" />

            <ImageView
                android:id="@+id/state_icon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/imageView10"
                app:srcCompat="@drawable/ic_note" />

            <TextView
                android:id="@+id/Type_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/task_type"
                app:layout_constraintBottom_toTopOf="@+id/state_icon"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="@+id/state_icon"
                app:layout_constraintTop_toBottomOf="@+id/state_icon"
                app:srcCompat="@drawable/ic_reward" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="@+id/task_title"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:srcCompat="@drawable/ic_type" />

            <TextView
                android:id="@+id/state_textview"
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:gravity="center_vertical"
                android:text="@string/task_state"
                app:layout_constraintBottom_toBottomOf="@+id/state_icon"
                app:layout_constraintStart_toEndOf="@+id/state_icon"
                app:layout_constraintTop_toTopOf="@+id/state_icon" />

            <TextView
                android:id="@+id/Task_reward_textview"
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:gravity="center_vertical"
                android:text="@string/task_reward"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/state_icon" />

            <TextView
                android:id="@+id/user_textView"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:gravity="center"
                android:text="@string/check_user"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/Task_reward_textview" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32sp"
                android:layout_height="32sp"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:srcCompat="@drawable/ic_laundry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>